Fix docker files

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,4 +2,4 @@ FROM alpine:3.7
 
 RUN apk add --no-cache pkgconfig gtk+2.0-dev g++ libcanberra-gtk2
 
-CMD sh /src/compile.sh
+CMD sh /src/docker/compile.sh
